скидання дефолтних стилів від браузера

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,29 @@ body {
 .link {
   text-decoration: none;
 }
+h1,
+h2,
+h3,
+h4,
+p {
+margin-top: 0;
+margin-bottom: 0;
+}
+ul,
+ol {
+margin-top: 0;
+margin-bottom: 0;
+padding-left: 0;
+}
+img {
+display: block;
+}
+
+
+
+
+
+
 
 /*====Шапка с навигацией====*/
 
@@ -36,6 +59,7 @@ body {
 .accentlogo {
   color: var(--primary-text-main);
 }
+
 
 .menu-list-item {
   font-weight: 500;
