--- a/css/styles.css
+++ b/css/styles.css
@@ -45,14 +45,20 @@ display: block;
   width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 156px;
+  padding-right: 156px;
   }
 
+
 .section {
-  padding-top: 120px;
- padding-bottom: 120px;
+padding-top: 120px;
+padding-bottom: 120px;
 }
+
+.title {
+  margin-bottom: 72px;
+}
+
 
 /*====Шапка с навигацией====*/
 
@@ -64,7 +70,9 @@ align-items: center;
 .header-container {
 display: flex;
 align-items: center;
-}
+padding-top: 25px;
+padding-bottom: 25px;
+} 
 
 
 .navigation {
@@ -103,7 +111,7 @@ margin-right: 332px;
   color: var(--primary-text-main);
 }
 
-.menu-list items:not(:last-child) {
+.menu-list-items:not(:last-child) {
   margin-right: 40px;
   
 }
@@ -119,13 +127,11 @@ margin-right: 332px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
- 
-      
+       
 }
 
 .contacts-list {
-  display: flex;
-  
+  display: flex;  
 }
 
   
@@ -133,9 +139,9 @@ margin-right: 332px;
    color: var(--secondary-text-main);
 }
  
-.contact-link:not(:last-child) {
+.contacts-links:not(:last-child) {
   margin-right: 40px;
-}
+}   
 
 .contact-link:hover, 
 .contact-link:focus {
@@ -145,13 +151,16 @@ margin-right: 332px;
 /*====HERO=====*/
  
 .hero {
+  padding: 188px 0;
+  text-align: center;
   background-color: #2E2F42;
-}
+} 
 
 .main-title {
+  margin-bottom: 48px;
   font-style: normal;
   font-weight: 700;
-  font-size: 56px;
+  font-size: 56px;  
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
@@ -159,6 +168,8 @@ margin-right: 332px;
 }
 
 .modal-btn {
+  min-width: 169px; 
+  padding: 16px 32px;
   font-family: var(--primary-font-family);
   font-weight: 500;
   font-size: 16px;
@@ -178,11 +189,24 @@ margin-right: 332px;
 
 /*=====Описание сайта=====*/
 
+.content-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -24px; 
+}
+
+.content-item-box {
+  flex-basis: calc((100% - 96px) / 4);
+  margin-left: 24px;
+}
+
+
 .content-title {
   list-style: none;
 }
 
-.content-title {
+.content-title { 
+  margin-bottom: 8px; 
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -199,6 +223,23 @@ margin-right: 332px;
 }
 
 /*======Галерея======*/
+
+.section.gallery.section {
+  padding-top: 0px;
+}
+
+.gallery-items {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -24px;
+  margin-top: -24px;
+}
+
+.gallery-items-box {
+  flex-basis: calc(100%-72px) / 3;
+  margin-left: 24px;
+  margin-top: 24px; 
+}
 
 .gallery-title {
   font-style: normal;
@@ -230,24 +271,45 @@ margin-right: 332px;
   color: var(--primary-text-main);
 }
 
-.users-list {
-  background-color: var(--text-hero-footer);
+.users-team {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -24px;
+  margin-top: -24px;
 }
+
+.users-team-box {
+  flex-basis: calc(100%-96px) / 4;
+  margin-left: 24px;
+  margin-top: 24px;
+  background-color: var(--text-hero-footer);
+}  
+
 
 .users-team-foto {
   background: url(man-with-laptop-presenting-something.jpg);
   border-radius: 0px;
 }
 
+.user-team-wrapper {
+  background: #ffffff;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  box-shadow: 0px 1px 2px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 6px 1px rgba(46, 47, 66, 0.08)
+  border-radius: 0px 0px 4px 4px;
+}
+
 .user-name {
-  font-weight: 500;
+  margin-bottom: 8px;
+  font-weight: 500; 
   font-size: 20px;
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--primary-text-main);
 }
-
+ 
 .user-position {
   font-size: 16px;
   line-height: 1.5;
@@ -267,13 +329,22 @@ margin-right: 332px;
 }
 
 .contact-footer {
+  padding-top: 101px;
+  padding-bottom: 100px;
   background: #2E2F42;
 }
 
- .contact-item {
+.contact-item {
+  display: flex;   
+  flex-wrap: wrap;
+  min-width: 264px;   
+}       
+
+ .contact-text { 
+  margin-top: 17px;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 16px; 
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #F4F4FD;
