--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,10 @@ display: block;
 }
 
 .container {
-  width: 1440px;
+  width: 1158px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 156px;
-  padding-right: 156px;
+  padding: 0 15px;
   }
 
 
@@ -57,6 +56,10 @@ padding-bottom: 120px;
 
 .title {
   margin-bottom: 72px;
+}
+
+.btn {
+  border: none;
 }
 
 
@@ -72,8 +75,6 @@ border-bottom: 1px solid #E7E9FC;
 .header-container {
 display: flex;
 align-items: center;
-padding-top: 25px;
-padding-bottom: 25px;
 
 } 
  
@@ -105,15 +106,20 @@ margin-right: 332px;
   color: var(--primary-text-main);
 }
 
+.menu-list-items { 
+padding: 24px 0;
+}
+
 
 .menu-list-item {
-  font-weight: 500;
+  font-weight: 500; 
   font-size: 16px;
   line-height: 1.50;
   letter-spacing: 0.02em;
   color: var(--primary-text-main);
+  
 }
-
+ 
 .menu-list-items:not(:last-child) {
   margin-right: 40px;
   
@@ -160,10 +166,11 @@ margin-right: 332px;
 } 
 
 .main-title {
+  max-width: 496px;
   margin-bottom: 48px;
   font-style: normal;
   font-weight: 700;
-  font-size: 56px;  
+  font-size: 56px;   
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
@@ -171,7 +178,9 @@ margin-right: 332px;
 }
 
 .modal-btn {
+  display: block;
   min-width: 169px; 
+  height: 56px;
   padding: 16px 32px;
   font-family: var(--primary-font-family);
   font-weight: 500;
@@ -181,13 +190,14 @@ margin-right: 332px;
   cursor: pointer;
   color: var(--text-hero-footer);
   background-color: var(--accent-color);
+  border-radius: 4px;
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #404BBF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  
 }
 
 /*=====Описание сайта=====*/
@@ -196,7 +206,7 @@ margin-right: 332px;
   display: flex;
   flex-wrap: wrap;
   margin-left: -24px; 
-}
+} 
 
 .content-item-box {
   flex-basis: calc((100% - 96px) / 4);
@@ -327,23 +337,22 @@ margin-right: 332px;
 
 /*=======Контакты=========*/
 
+.logo-footer {
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
 .accentlogo-contacts {
  color: #f4f4fd;
 }
 
 .contact-footer {
-  padding-top: 101px;
-  padding-bottom: 100px;
+  padding: 100px 0;
   background: #2E2F42;
-}
-
-.contact-item {
-  display: flex;   
-  flex-wrap: wrap;
-  min-width: 264px;   
-}       
+} 
 
  .contact-text { 
+  max-width: 264px;
   margin-top: 17px;
   font-style: normal;
   font-weight: 400;
@@ -389,6 +398,7 @@ margin-bottom: 72px;
 .modal-btn-portfolio:focus {
   background-color: #404BBF;
   color: var(--text-hero-footer);
+  border: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   
 }
@@ -418,7 +428,7 @@ margin-bottom: 72px;
 
 .portfolio-wrapper {
   background: #ffffff;
-  padding: 32px 16px; 
+  padding: 32px 16px;  
   border: 1px solid #E7E9FC;
 } 
 
