--- a/css/styles.css
+++ b/css/styles.css
@@ -106,10 +106,10 @@ margin-right: 332px;
   color: var(--primary-text-main);
 }
 
-.menu-list-items { 
+.menu-list { 
 padding: 24px 0;
 }
-
+ 
 
 .menu-list-item {
   font-weight: 500; 
@@ -205,13 +205,14 @@ padding: 24px 0;
 .content-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -24px; 
+  gap: 24px; 
 } 
-
+ 
 .content-item-box {
-  flex-basis: calc((100% - 96px) / 4);
-  margin-left: 24px;
+  width: calc((100% - 72px) / 4);
+  margin-right: 0
 }
+
 
 
 .content-title {
@@ -244,14 +245,12 @@ padding: 24px 0;
 .gallery-items {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -24px;
-  margin-top: -24px;
+  gap: 24px;
 }
 
 .gallery-items-box {
-  flex-basis: calc(100%-72px) / 3;
-  margin-left: 24px;
-  margin-top: 24px; 
+  width: calc((100% - 48px) / 3)
+  margin-right: 0;
 }
 
 .gallery-title {
@@ -287,15 +286,14 @@ padding: 24px 0;
 .users-team {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -24px;
-  margin-top: -24px;
+  gap: 24px;
 }
 
 .users-team-box {
-  flex-basis: calc(100%-96px) / 4;
-  margin-left: 24px;
-  margin-top: 24px;
+  width: calc((100% - 72px) / 4);
+  margin-right: 0;
   background-color: var(--text-hero-footer);
+  border-radius: 0px 0px 4px 4px;
 }  
 
 
@@ -306,8 +304,7 @@ padding: 24px 0;
 
 .user-team-wrapper {
   background: #ffffff;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px; 
   box-shadow: 0px 1px 2px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 6px 1px rgba(46, 47, 66, 0.08)
   border-radius: 0px 0px 4px 4px;
@@ -406,15 +403,15 @@ margin-bottom: 72px;
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -24px;
-  margin-top: -48px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-list-box { 
-  flex-basis: calc((100% - 72px) / 3);
-  margin-left: 24px;
-  margin-top: 48px;
-}
+  width: calc((100% - 48px) / 3);
+  margin-right: 0;
+  margin-bottom: 0;
+}  
 
   .portfolio-card {
   
@@ -432,6 +429,10 @@ margin-bottom: 72px;
   border: 1px solid #E7E9FC;
 } 
 
+.user-team-wrapper {
+  border-top: none;
+}
+ 
 .portfolio-title { 
   font-weight: 500;
   font-size: 20px;
