--- a/css/styles.css
+++ b/css/styles.css
@@ -75,8 +75,9 @@ border-bottom: 1px solid #E7E9FC;
 .header-container {
 display: flex;
 align-items: center;
+justify-content: space-between;
 
-} 
+}  
  
  
 .navigation {
@@ -87,8 +88,7 @@ align-items: center;
 }
 
 .menu-list {
-display: flex; 
-margin-right: 332px;
+display: flex;   
 padding: 24px 0;    
 
 }
@@ -167,6 +167,7 @@ padding: 24px 0;
 
 .main-title {
   max-width: 496px;
+  margin: 0 auto; 
   margin-bottom: 48px;
   font-style: normal;
   font-weight: 700;
@@ -181,6 +182,7 @@ padding: 24px 0;
   display: block;
   min-width: 169px; 
   height: 56px;
+  margin: 0 auto; 
   padding: 16px 32px;
   font-family: var(--primary-font-family);
   font-weight: 500;
@@ -202,9 +204,13 @@ padding: 24px 0;
 
 /*=====Описание сайта=====*/
 
+.container-title{
+  visibility: hidden;
+} 
+
 .content-list {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; 
   gap: 24px; 
 } 
  
@@ -336,7 +342,14 @@ padding: 24px 0;
 
 .logo-footer {
   display: inline-block;
-  margin-bottom: 16px;
+  margin-bottom: 17px;
+  font-family: var(--secondary-font-family);
+  font-weight: 800;  
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+  text-transform: uppercase;
 }
 
 .accentlogo-contacts {
@@ -350,10 +363,9 @@ padding: 24px 0;
 
  .contact-text { 
   max-width: 264px;
-  margin-top: 17px;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px; 
+  font-size: 16px;  
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #F4F4FD;
